# EasyMacros

./: .travis.yml  README.md  easymacros.cabal  macros.cabal
src/: DoQQ.hs  Main.hs  RegExp.hs  TH.hs
src/Language/Haskell/TH/: Macro.hs  StandardMacros.hs
test/: Main.hs
